Fix layout shift for avatar

--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -70,7 +70,8 @@
 
         .site-logo {
             width: 100%;
-            height: 100%;
+            height: auto;
+            aspect-ratio: 1/1;
             border-radius: 100%;
             box-shadow: var(--shadow-l1);
         }
